fix: various mistakes according to reviewer notes
fixed:
page centering
page shuffling by adding border box and fixed sizes
checkbox indicators not showing
outlines not fitting the design layout
and other problems

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ html {
 
 .page {
   display: flex;
+  justify-content: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -53,7 +54,6 @@ ol {
 
 .content {
   max-width: 1140px;
-  max-height: 534px;
   display: flex;
   align-items: flex-end;
   gap: 30px;
@@ -68,11 +68,12 @@ ol {
 }
 
 .content__list-container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 30px;
   width: 100%;
-  max-height: 298px;
+  height: 298px;
   overflow: scroll;
   overflow-x: hidden;
   position: relative;
@@ -83,12 +84,13 @@ ol {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 20px;
 }
 
 .result__video-container {
-  min-width: 711px;
-  min-height: 386px;
+  box-sizing: border-box;
+  width: 711px;
+  height: 386px;
   margin-bottom: 16px;
   position: relative;
 }
@@ -126,6 +128,7 @@ ol {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .title {
@@ -196,7 +199,7 @@ ol {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
-  color: #fff;
+  color: inherit;
   background-color: transparent;
   border: none;
   border-top: 1px solid #fff;
@@ -215,11 +218,12 @@ ol {
 
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__pseudo-checkbox {
-  min-height: 19px;
-  min-width: 19px;
+  height: 19px;
+  width: 19px;
   border: 1px solid #fff;
   padding: 1px;
 }
@@ -271,6 +275,7 @@ ol {
 
 .button:focus-visible {
   outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .content__card-link_current {
@@ -283,6 +288,7 @@ ol {
 
 .content__card-link:hover {
   text-decoration: underline;
+  text-decoration-thickness: 5%;
 }
 
 .content__card-link:focus {
